[project]
name = "grafico-projeto"
version = "0.1.0"
description = ""
authors = [
    {name = "jp",email = "joaopedroescobar13@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib (>=3.10.5,<4.0.0)"
]

[tool.poetry]
packages = [{include = "grafico_projeto", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
